--- a/prepare_dataset.ipynb
+++ b/prepare_dataset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
     "from utilities.common_utils import *\n",
     "from utilities.landmark_utils import *\n",
     "from utilities.plotting import *\n",
-    "from models import ResUNet, UNet"
+    "#from models import ResUNet, UNet"
    ]
   },
   {
@@ -56,11 +56,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "path = Path('./data'); path.mkdir(exist_ok=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "PosixPath('data')"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "path"
    ]
   },
   {
@@ -72,19 +92,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
-      "                                 Dload  Upload   Total   Spent    Left  Speed\n",
-      "100 1042M  100 1042M    0     0  8556k      0  0:02:04  0:02:04 --:--:-- 8524k     0  7679k      0  0:02:19  0:01:01  0:01:18 9351k\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "URL = 'https://ndownloader.figshare.com/articles/3471833?private_link=37ec464af8e81ae6ebbf'\n",
     "!cd {path}\n",
@@ -100,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,19 +119,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/bin/sh: 1: unar: not found\n",
-      "/bin/sh: 1: unar: not found\n",
-      "/bin/sh: 1: unar: not found\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!unar -q -f -o {path} {path}/AnnotationsByMD.rar\n",
     "!unar -q -f -o {path} {path}/EvaluationCode.rar\n",
@@ -137,19 +137,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "test_orig_path = path/'RawImage/Test1Data'\n",
     "train_orig_path = path/'RawImage/TrainingData'\n",
     "\n",
-    "IMAGE_SIZE = 128"
+    "IMAGE_SIZE = 256"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +158,7 @@
        "PosixPath('data/RawImage/Test1Data')"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -186,13 +186,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "test_path = path/f'images/{IMAGE_SIZE}/test1'; test_path.mkdir(parents=True, exist_ok=True)\n",
     "l_resize = lambda fpath : resize(fpath, IMAGE_SIZE, test_path)\n",
     "with ThreadPoolExecutor(16) as e: e.map(l_resize, list_files(test_orig_path))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "PosixPath('data/images/256/test1')"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_path"
    ]
   },
   {
@@ -204,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,16 +235,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "PosixPath('data/images/128/train')"
+       "PosixPath('data/images/256/train')"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -232,6 +252,13 @@
    "source": [
     "train_path"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -250,9 +277,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
