Added shift data aug

--- a/prepare_dataset.ipynb
+++ b/prepare_dataset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +74,7 @@
        "PosixPath('data')"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -137,28 +137,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_orig_path = path/'RawImage/Test1Data'\n",
-    "train_orig_path = path/'RawImage/TrainingData'\n",
+    "test_orig_path = path/'testResults'\n",
+    "train_orig_path = path/'AugResults/trainingImages'\n",
     "\n",
-    "IMAGE_SIZE = 128"
+    "IMAGE_SIZE = 256"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "PosixPath('data/RawImage/Test1Data')"
+       "PosixPath('data/testResults')"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,27 +186,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_path = path/f'images/{IMAGE_SIZE}/test1'; test_path.mkdir(parents=True, exist_ok=True)\n",
+    "test_path = path/f'{IMAGE_SIZE}/testImages'; test_path.mkdir(parents=True, exist_ok=True)\n",
     "l_resize = lambda fpath : resize(fpath, IMAGE_SIZE, test_path)\n",
     "with ThreadPoolExecutor(16) as e: e.map(l_resize, list_files(test_orig_path))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "PosixPath('data/images/128/test1')"
+       "PosixPath('data/256/testImages')"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -224,11 +224,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_path = path/f'images/{IMAGE_SIZE}/train'; train_path.mkdir(exist_ok=True) \n",
+    "train_path = path/f'images/{IMAGE_SIZE}/trainingImages'; train_path.mkdir(exist_ok=True) \n",
     "l_resize = lambda fpath : resize(fpath, IMAGE_SIZE, train_path)\n",
     "with ThreadPoolExecutor(16) as e: e.map(l_resize, list_files(train_orig_path))"
    ]
@@ -277,7 +277,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
