--- a/prepare_dataset.ipynb
+++ b/prepare_dataset.ipynb
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,28 +137,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_orig_path = path/'testResults'\n",
-    "train_orig_path = path/'AugResults/trainingImages'\n",
+    "test_orig_path = path/'RawImage/Test1Data'\n",
+    "train_orig_path = path/'RawImage/Test1Data'\n",
     "\n",
     "IMAGE_SIZE = 256"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "PosixPath('data/testResults')"
+       "WindowsPath('data/RawImage/Test1Data')"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,27 +186,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_path = path/f'{IMAGE_SIZE}/testImages'; test_path.mkdir(parents=True, exist_ok=True)\n",
+    "test_path = path/f'{IMAGE_SIZE}/testImages2'; test_path.mkdir(parents=True, exist_ok=True)\n",
     "l_resize = lambda fpath : resize(fpath, IMAGE_SIZE, test_path)\n",
     "with ThreadPoolExecutor(16) as e: e.map(l_resize, list_files(test_orig_path))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "PosixPath('data/256/testImages')"
+       "WindowsPath('data/256/testImages')"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -277,7 +277,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
