--- a/prepare_dataset.ipynb
+++ b/prepare_dataset.ipynb
@@ -4,7 +4,20 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "In C:\\Users\\Flayiva_07\\anaconda3\\envs\\pytorchenv\\lib\\site-packages\\matplotlib\\mpl-data\\stylelib\\_classic_test.mplstyle: \n",
+      "The savefig.frameon rcparam was deprecated in Matplotlib 3.1 and will be removed in 3.3.\n",
+      "In C:\\Users\\Flayiva_07\\anaconda3\\envs\\pytorchenv\\lib\\site-packages\\matplotlib\\mpl-data\\stylelib\\_classic_test.mplstyle: \n",
+      "The verbose.level rcparam was deprecated in Matplotlib 3.1 and will be removed in 3.3.\n",
+      "In C:\\Users\\Flayiva_07\\anaconda3\\envs\\pytorchenv\\lib\\site-packages\\matplotlib\\mpl-data\\stylelib\\_classic_test.mplstyle: \n",
+      "The verbose.fileo rcparam was deprecated in Matplotlib 3.1 and will be removed in 3.3.\n"
+     ]
+    }
+   ],
    "source": [
     "%reload_ext autoreload\n",
     "%autoreload 2\n",
@@ -65,16 +78,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "PosixPath('data')"
+       "WindowsPath('data')"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -142,7 +155,7 @@
    "outputs": [],
    "source": [
     "test_orig_path = path/'RawImage/Test1Data'\n",
-    "train_orig_path = path/'RawImage/Test1Data'\n",
+    "train_orig_path = path/'images/1px/trainingAug'\n",
     "\n",
     "IMAGE_SIZE = 256"
    ]
@@ -186,11 +199,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_path = path/f'{IMAGE_SIZE}/testImages2'; test_path.mkdir(parents=True, exist_ok=True)\n",
+    "test_path = path/f'images/1px/{IMAGE_SIZE}/test'; test_path.mkdir(parents=True, exist_ok=True)\n",
     "l_resize = lambda fpath : resize(fpath, IMAGE_SIZE, test_path)\n",
     "with ThreadPoolExecutor(16) as e: e.map(l_resize, list_files(test_orig_path))"
    ]
@@ -228,7 +241,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_path = path/f'images/{IMAGE_SIZE}/trainingImages'; train_path.mkdir(exist_ok=True) \n",
+    "train_path = path/f'images/1px/{IMAGE_SIZE}/train'; train_path.mkdir(exist_ok=True) \n",
     "l_resize = lambda fpath : resize(fpath, IMAGE_SIZE, train_path)\n",
     "with ThreadPoolExecutor(16) as e: e.map(l_resize, list_files(train_orig_path))"
    ]
