--- a/prepare_dataset.ipynb
+++ b/prepare_dataset.ipynb
@@ -9,11 +9,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "In C:\\Users\\Flayiva_07\\anaconda3\\envs\\pytorchenv\\lib\\site-packages\\matplotlib\\mpl-data\\stylelib\\_classic_test.mplstyle: \n",
+      "In C:\\Users\\Flayiva_01\\anaconda3\\envs\\pytorchenv\\lib\\site-packages\\matplotlib\\mpl-data\\stylelib\\_classic_test.mplstyle: \n",
       "The savefig.frameon rcparam was deprecated in Matplotlib 3.1 and will be removed in 3.3.\n",
-      "In C:\\Users\\Flayiva_07\\anaconda3\\envs\\pytorchenv\\lib\\site-packages\\matplotlib\\mpl-data\\stylelib\\_classic_test.mplstyle: \n",
+      "In C:\\Users\\Flayiva_01\\anaconda3\\envs\\pytorchenv\\lib\\site-packages\\matplotlib\\mpl-data\\stylelib\\_classic_test.mplstyle: \n",
       "The verbose.level rcparam was deprecated in Matplotlib 3.1 and will be removed in 3.3.\n",
-      "In C:\\Users\\Flayiva_07\\anaconda3\\envs\\pytorchenv\\lib\\site-packages\\matplotlib\\mpl-data\\stylelib\\_classic_test.mplstyle: \n",
+      "In C:\\Users\\Flayiva_01\\anaconda3\\envs\\pytorchenv\\lib\\site-packages\\matplotlib\\mpl-data\\stylelib\\_classic_test.mplstyle: \n",
       "The verbose.fileo rcparam was deprecated in Matplotlib 3.1 and will be removed in 3.3.\n"
      ]
     }
@@ -154,8 +154,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_orig_path = path/'RawImage/Test1Data'\n",
-    "train_orig_path = path/'images/1px/trainingAug'\n",
+    "# test_orig_path = path/'RawImage/Test1Data'\n",
+    "train_orig_path = path/'images/1px_3px/256/trainingAug'\n",
     "\n",
     "IMAGE_SIZE = 256"
    ]
@@ -166,14 +166,15 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "WindowsPath('data/RawImage/Test1Data')"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'test_orig_path' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-6-634a2dba6986>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mtest_orig_path\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'test_orig_path' is not defined"
+     ]
     }
    ],
    "source": [
@@ -199,11 +200,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_path = path/f'images/1px/{IMAGE_SIZE}/test'; test_path.mkdir(parents=True, exist_ok=True)\n",
+    "test_path = path/f'images/2px/{IMAGE_SIZE}/test'; test_path.mkdir(parents=True, exist_ok=True)\n",
     "l_resize = lambda fpath : resize(fpath, IMAGE_SIZE, test_path)\n",
     "with ThreadPoolExecutor(16) as e: e.map(l_resize, list_files(test_orig_path))"
    ]
@@ -216,7 +217,7 @@
     {
      "data": {
       "text/plain": [
-       "WindowsPath('data/256/testImages')"
+       "WindowsPath('data/images/2px/256/test')"
       ]
      },
      "execution_count": 9,
@@ -237,11 +238,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_path = path/f'images/1px/{IMAGE_SIZE}/train'; train_path.mkdir(exist_ok=True) \n",
+    "train_path = path/f'images/1px_3px/{IMAGE_SIZE}/train2'; train_path.mkdir(exist_ok=True) \n",
     "l_resize = lambda fpath : resize(fpath, IMAGE_SIZE, train_path)\n",
     "with ThreadPoolExecutor(16) as e: e.map(l_resize, list_files(train_orig_path))"
    ]
