--- a/prepare_dataset.ipynb
+++ b/prepare_dataset.ipynb
@@ -155,14 +155,14 @@
    "outputs": [],
    "source": [
     "# test_orig_path = path/'RawImage/Test1Data'\n",
-    "train_orig_path = path/'images/1px_3px/256/trainingAug'\n",
+    "train_orig_path =  path/'RawImage/TrainingData'\n",
     "\n",
     "IMAGE_SIZE = 256"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +172,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-6-634a2dba6986>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mtest_orig_path\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m<ipython-input-11-634a2dba6986>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mtest_orig_path\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[1;31mNameError\u001b[0m: name 'test_orig_path' is not defined"
      ]
     }
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,11 +238,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_path = path/f'images/1px_3px/{IMAGE_SIZE}/train2'; train_path.mkdir(exist_ok=True) \n",
+    "train_path = path/f'images/noaug/{IMAGE_SIZE}/train'; train_path.mkdir(exist_ok=True) \n",
     "l_resize = lambda fpath : resize(fpath, IMAGE_SIZE, train_path)\n",
     "with ThreadPoolExecutor(16) as e: e.map(l_resize, list_files(train_orig_path))"
    ]
