--- a/prepare_dataset.ipynb
+++ b/prepare_dataset.ipynb
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +87,7 @@
        "WindowsPath('data')"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,11 +150,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# test_orig_path = path/'RawImage/Test1Data'\n",
+    "test1_orig_path = path/'RawImage/Test1Data'\n",
+    "test2_orig_path = path/'RawImage/Test2Data'\n",
     "train_orig_path =  path/'RawImage/TrainingData'\n",
     "\n",
     "IMAGE_SIZE = 256"
@@ -162,19 +163,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'test_orig_path' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-11-634a2dba6986>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mtest_orig_path\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m: name 'test_orig_path' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "WindowsPath('data/RawImage/Test1Data')"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,27 +200,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_path = path/f'images/2px/{IMAGE_SIZE}/test'; test_path.mkdir(parents=True, exist_ok=True)\n",
+    "test_path = path/f'images/raw/{IMAGE_SIZE}/test1'; test_path.mkdir(parents=True, exist_ok=True)\n",
     "l_resize = lambda fpath : resize(fpath, IMAGE_SIZE, test_path)\n",
-    "with ThreadPoolExecutor(16) as e: e.map(l_resize, list_files(test_orig_path))"
+    "with ThreadPoolExecutor(16) as e: e.map(l_resize, list_files(test1_orig_path))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_path = path/f'images/raw/{IMAGE_SIZE}/test2'; test_path.mkdir(parents=True, exist_ok=True)\n",
+    "l_resize = lambda fpath : resize(fpath, IMAGE_SIZE, test_path)\n",
+    "with ThreadPoolExecutor(16) as e: e.map(l_resize, list_files(test2_orig_path))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "WindowsPath('data/images/2px/256/test')"
+       "WindowsPath('data/images/raw/256/test2')"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -238,11 +249,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_path = path/f'images/noaug/{IMAGE_SIZE}/train'; train_path.mkdir(exist_ok=True) \n",
+    "train_path = path/f'images/raw/{IMAGE_SIZE}/train'; train_path.mkdir(exist_ok=True) \n",
     "l_resize = lambda fpath : resize(fpath, IMAGE_SIZE, train_path)\n",
     "with ThreadPoolExecutor(16) as e: e.map(l_resize, list_files(train_orig_path))"
    ]
