Done with the project

--- a/Data Augmentation Image Shift.ipynb
+++ b/Data Augmentation Image Shift.ipynb
@@ -47,18 +47,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "id": "reserved-charge",
    "metadata": {},
    "outputs": [],
    "source": [
-    "BASE_PATH = \"data/images/raw/128/train\"\n",
+    "BASE_PATH = \"data/images/raw/256/train\"\n",
     "TEST_BASE_PATH = \"data/Test/image\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "id": "vietnamese-committee",
    "metadata": {},
    "outputs": [],
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "id": "acting-beast",
    "metadata": {},
    "outputs": [],
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "id": "complete-leisure",
    "metadata": {},
    "outputs": [
@@ -95,7 +95,7 @@
        "150"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "id": "recreational-noise",
    "metadata": {},
    "outputs": [],
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 11,
    "id": "infectious-mechanism",
    "metadata": {},
    "outputs": [],
@@ -133,10 +133,10 @@
     "augment_functions += [iaa.Affine(translate_px={\"x\": (-1)})]\n",
     "\n",
     "# 2px\n",
-    "augment_functions += [iaa.Affine(translate_px={\"y\": (2)})]\n",
-    "augment_functions += [iaa.Affine(translate_px={\"y\": (-2)})]\n",
-    "augment_functions += [iaa.Affine(translate_px={\"x\": (2)})]\n",
-    "augment_functions += [iaa.Affine(translate_px={\"x\": (-2)})]\n",
+    "# augment_functions += [iaa.Affine(translate_px={\"y\": (2)})]\n",
+    "# augment_functions += [iaa.Affine(translate_px={\"y\": (-2)})]\n",
+    "# augment_functions += [iaa.Affine(translate_px={\"x\": (2)})]\n",
+    "# augment_functions += [iaa.Affine(translate_px={\"x\": (-2)})]\n",
     "\n",
     "# 3px\n",
     "augment_functions += [iaa.Affine(translate_px={\"y\": (3)})]\n",
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 12,
    "id": "regional-geology",
    "metadata": {},
    "outputs": [],
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 13,
    "id": "bibliographic-savings",
    "metadata": {},
    "outputs": [
@@ -178,305 +178,305 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(128, 128, 3)\n",
+      "(256, 256, 3)\n",
       "**************************\n",
-      "(128, 128, 3)\n",
+      "(256, 256, 3)\n",
       "**************************\n",
-      "(128, 128, 3)\n",
+      "(256, 256, 3)\n",
       "**************************\n",
-      "(128, 128, 3)\n",
+      "(256, 256, 3)\n",
       "**************************\n",
-      "(128, 128, 3)\n",
+      "(256, 256, 3)\n",
       "**************************\n",
-      "(128, 128, 3)\n",
+      "(256, 256, 3)\n",
       "**************************\n",
-      "(128, 128, 3)\n",
+      "(256, 256, 3)\n",
       "**************************\n",
-      "(128, 128, 3)\n",
+      "(256, 256, 3)\n",
       "**************************\n",
-      "(128, 128, 3)\n",
+      "(256, 256, 3)\n",
       "**************************\n",
-      "(128, 128, 3)\n",
+      "(256, 256, 3)\n",
       "**************************\n",
-      "(128, 128, 3)\n",
+      "(256, 256, 3)\n",
       "**************************\n",
-      "(128, 128, 3)\n",
+      "(256, 256, 3)\n",
       "**************************\n",
-      "(128, 128, 3)\n",
+      "(256, 256, 3)\n",
       "**************************\n",
-      "(128, 128, 3)\n",
+      "(256, 256, 3)\n",
       "**************************\n",
-      "(128, 128, 3)\n",
+      "(256, 256, 3)\n",
       "**************************\n",
-      "(128, 128, 3)\n",
+      "(256, 256, 3)\n",
       "**************************\n",
-      "(128, 128, 3)\n",
+      "(256, 256, 3)\n",
       "**************************\n",
-      "(128, 128, 3)\n",
+      "(256, 256, 3)\n",
       "**************************\n",
-      "(128, 128, 3)\n",
+      "(256, 256, 3)\n",
       "**************************\n",
-      "(128, 128, 3)\n",
+      "(256, 256, 3)\n",
       "**************************\n",
-      "(128, 128, 3)\n",
+      "(256, 256, 3)\n",
       "**************************\n",
-      "(128, 128, 3)\n",
+      "(256, 256, 3)\n",
       "**************************\n",
-      "(128, 128, 3)\n",
+      "(256, 256, 3)\n",
       "**************************\n",
-      "(128, 128, 3)\n",
+      "(256, 256, 3)\n",
       "**************************\n",
-      "(128, 128, 3)\n",
+      "(256, 256, 3)\n",
       "**************************\n",
-      "(128, 128, 3)\n",
+      "(256, 256, 3)\n",
       "**************************\n",
-      "(128, 128, 3)\n",
+      "(256, 256, 3)\n",
       "**************************\n",
-      "(128, 128, 3)\n",
+      "(256, 256, 3)\n",
       "**************************\n",
-      "(128, 128, 3)\n",
+      "(256, 256, 3)\n",
       "**************************\n",
-      "(128, 128, 3)\n",
+      "(256, 256, 3)\n",
       "**************************\n",
-      "(128, 128, 3)\n",
+      "(256, 256, 3)\n",
       "**************************\n",
-      "(128, 128, 3)\n",
+      "(256, 256, 3)\n",
       "**************************\n",
-      "(128, 128, 3)\n",
+      "(256, 256, 3)\n",
       "**************************\n",
-      "(128, 128, 3)\n",
+      "(256, 256, 3)\n",
       "**************************\n",
-      "(128, 128, 3)\n",
+      "(256, 256, 3)\n",
       "**************************\n",
-      "(128, 128, 3)\n",
+      "(256, 256, 3)\n",
       "**************************\n",
-      "(128, 128, 3)\n",
+      "(256, 256, 3)\n",
       "**************************\n",
-      "(128, 128, 3)\n",
+      "(256, 256, 3)\n",
       "**************************\n",
-      "(128, 128, 3)\n",
+      "(256, 256, 3)\n",
       "**************************\n",
-      "(128, 128, 3)\n",
+      "(256, 256, 3)\n",
       "**************************\n",
-      "(128, 128, 3)\n",
+      "(256, 256, 3)\n",
       "**************************\n",
-      "(128, 128, 3)\n",
+      "(256, 256, 3)\n",
       "**************************\n",
-      "(128, 128, 3)\n",
+      "(256, 256, 3)\n",
       "**************************\n",
-      "(128, 128, 3)\n",
+      "(256, 256, 3)\n",
       "**************************\n",
-      "(128, 128, 3)\n",
+      "(256, 256, 3)\n",
       "**************************\n",
-      "(128, 128, 3)\n",
+      "(256, 256, 3)\n",
       "**************************\n",
-      "(128, 128, 3)\n",
+      "(256, 256, 3)\n",
       "**************************\n",
-      "(128, 128, 3)\n",
+      "(256, 256, 3)\n",
       "**************************\n",
-      "(128, 128, 3)\n",
+      "(256, 256, 3)\n",
       "**************************\n",
-      "(128, 128, 3)\n",
+      "(256, 256, 3)\n",
       "**************************\n",
-      "(128, 128, 3)\n",
+      "(256, 256, 3)\n",
       "**************************\n",
-      "(128, 128, 3)\n",
+      "(256, 256, 3)\n",
       "**************************\n",
-      "(128, 128, 3)\n",
+      "(256, 256, 3)\n",
       "**************************\n",
-      "(128, 128, 3)\n",
+      "(256, 256, 3)\n",
       "**************************\n",
-      "(128, 128, 3)\n",
+      "(256, 256, 3)\n",
       "**************************\n",
-      "(128, 128, 3)\n",
+      "(256, 256, 3)\n",
       "**************************\n",
-      "(128, 128, 3)\n",
+      "(256, 256, 3)\n",
       "**************************\n",
-      "(128, 128, 3)\n",
+      "(256, 256, 3)\n",
       "**************************\n",
-      "(128, 128, 3)\n",
+      "(256, 256, 3)\n",
       "**************************\n",
-      "(128, 128, 3)\n",
+      "(256, 256, 3)\n",
       "**************************\n",
-      "(128, 128, 3)\n",
+      "(256, 256, 3)\n",
       "**************************\n",
-      "(128, 128, 3)\n",
+      "(256, 256, 3)\n",
       "**************************\n",
-      "(128, 128, 3)\n",
+      "(256, 256, 3)\n",
       "**************************\n",
-      "(128, 128, 3)\n",
+      "(256, 256, 3)\n",
       "**************************\n",
-      "(128, 128, 3)\n",
+      "(256, 256, 3)\n",
       "**************************\n",
-      "(128, 128, 3)\n",
+      "(256, 256, 3)\n",
       "**************************\n",
-      "(128, 128, 3)\n",
+      "(256, 256, 3)\n",
       "**************************\n",
-      "(128, 128, 3)\n",
+      "(256, 256, 3)\n",
       "**************************\n",
-      "(128, 128, 3)\n",
+      "(256, 256, 3)\n",
       "**************************\n",
-      "(128, 128, 3)\n",
+      "(256, 256, 3)\n",
       "**************************\n",
-      "(128, 128, 3)\n",
+      "(256, 256, 3)\n",
       "**************************\n",
-      "(128, 128, 3)\n",
+      "(256, 256, 3)\n",
       "**************************\n",
-      "(128, 128, 3)\n",
+      "(256, 256, 3)\n",
       "**************************\n",
-      "(128, 128, 3)\n",
+      "(256, 256, 3)\n",
       "**************************\n",
-      "(128, 128, 3)\n",
+      "(256, 256, 3)\n",
       "**************************\n",
-      "(128, 128, 3)\n",
+      "(256, 256, 3)\n",
       "**************************\n",
-      "(128, 128, 3)\n",
+      "(256, 256, 3)\n",
       "**************************\n",
-      "(128, 128, 3)\n",
+      "(256, 256, 3)\n",
       "**************************\n",
-      "(128, 128, 3)\n",
+      "(256, 256, 3)\n",
       "**************************\n",
-      "(128, 128, 3)\n",
+      "(256, 256, 3)\n",
       "**************************\n",
-      "(128, 128, 3)\n",
+      "(256, 256, 3)\n",
       "**************************\n",
-      "(128, 128, 3)\n",
+      "(256, 256, 3)\n",
       "**************************\n",
-      "(128, 128, 3)\n",
+      "(256, 256, 3)\n",
       "**************************\n",
-      "(128, 128, 3)\n",
+      "(256, 256, 3)\n",
       "**************************\n",
-      "(128, 128, 3)\n",
+      "(256, 256, 3)\n",
       "**************************\n",
-      "(128, 128, 3)\n",
+      "(256, 256, 3)\n",
       "**************************\n",
-      "(128, 128, 3)\n",
+      "(256, 256, 3)\n",
       "**************************\n",
-      "(128, 128, 3)\n",
+      "(256, 256, 3)\n",
       "**************************\n",
-      "(128, 128, 3)\n",
+      "(256, 256, 3)\n",
       "**************************\n",
-      "(128, 128, 3)\n",
+      "(256, 256, 3)\n",
       "**************************\n",
-      "(128, 128, 3)\n",
+      "(256, 256, 3)\n",
       "**************************\n",
-      "(128, 128, 3)\n",
+      "(256, 256, 3)\n",
       "**************************\n",
-      "(128, 128, 3)\n",
+      "(256, 256, 3)\n",
       "**************************\n",
-      "(128, 128, 3)\n",
+      "(256, 256, 3)\n",
       "**************************\n",
-      "(128, 128, 3)\n",
+      "(256, 256, 3)\n",
       "**************************\n",
-      "(128, 128, 3)\n",
+      "(256, 256, 3)\n",
       "**************************\n",
-      "(128, 128, 3)\n",
+      "(256, 256, 3)\n",
       "**************************\n",
-      "(128, 128, 3)\n",
+      "(256, 256, 3)\n",
       "**************************\n",
-      "(128, 128, 3)\n",
+      "(256, 256, 3)\n",
       "**************************\n",
-      "(128, 128, 3)\n",
+      "(256, 256, 3)\n",
       "**************************\n",
-      "(128, 128, 3)\n",
+      "(256, 256, 3)\n",
       "**************************\n",
-      "(128, 128, 3)\n",
+      "(256, 256, 3)\n",
       "**************************\n",
-      "(128, 128, 3)\n",
+      "(256, 256, 3)\n",
       "**************************\n",
-      "(128, 128, 3)\n",
+      "(256, 256, 3)\n",
       "**************************\n",
-      "(128, 128, 3)\n",
+      "(256, 256, 3)\n",
       "**************************\n",
-      "(128, 128, 3)\n",
+      "(256, 256, 3)\n",
       "**************************\n",
-      "(128, 128, 3)\n",
+      "(256, 256, 3)\n",
       "**************************\n",
-      "(128, 128, 3)\n",
+      "(256, 256, 3)\n",
       "**************************\n",
-      "(128, 128, 3)\n",
+      "(256, 256, 3)\n",
       "**************************\n",
-      "(128, 128, 3)\n",
+      "(256, 256, 3)\n",
       "**************************\n",
-      "(128, 128, 3)\n",
+      "(256, 256, 3)\n",
       "**************************\n",
-      "(128, 128, 3)\n",
+      "(256, 256, 3)\n",
       "**************************\n",
-      "(128, 128, 3)\n",
+      "(256, 256, 3)\n",
       "**************************\n",
-      "(128, 128, 3)\n",
+      "(256, 256, 3)\n",
       "**************************\n",
-      "(128, 128, 3)\n",
+      "(256, 256, 3)\n",
       "**************************\n",
-      "(128, 128, 3)\n",
+      "(256, 256, 3)\n",
       "**************************\n",
-      "(128, 128, 3)\n",
+      "(256, 256, 3)\n",
       "**************************\n",
-      "(128, 128, 3)\n",
+      "(256, 256, 3)\n",
       "**************************\n",
-      "(128, 128, 3)\n",
+      "(256, 256, 3)\n",
       "**************************\n",
-      "(128, 128, 3)\n",
+      "(256, 256, 3)\n",
       "**************************\n",
-      "(128, 128, 3)\n",
+      "(256, 256, 3)\n",
       "**************************\n",
-      "(128, 128, 3)\n",
+      "(256, 256, 3)\n",
       "**************************\n",
-      "(128, 128, 3)\n",
+      "(256, 256, 3)\n",
       "**************************\n",
-      "(128, 128, 3)\n",
+      "(256, 256, 3)\n",
       "**************************\n",
-      "(128, 128, 3)\n",
+      "(256, 256, 3)\n",
       "**************************\n",
-      "(128, 128, 3)\n",
+      "(256, 256, 3)\n",
       "**************************\n",
-      "(128, 128, 3)\n",
+      "(256, 256, 3)\n",
       "**************************\n",
-      "(128, 128, 3)\n",
+      "(256, 256, 3)\n",
       "**************************\n",
-      "(128, 128, 3)\n",
+      "(256, 256, 3)\n",
       "**************************\n",
-      "(128, 128, 3)\n",
+      "(256, 256, 3)\n",
       "**************************\n",
-      "(128, 128, 3)\n",
+      "(256, 256, 3)\n",
       "**************************\n",
-      "(128, 128, 3)\n",
+      "(256, 256, 3)\n",
       "**************************\n",
-      "(128, 128, 3)\n",
+      "(256, 256, 3)\n",
       "**************************\n",
-      "(128, 128, 3)\n",
+      "(256, 256, 3)\n",
       "**************************\n",
-      "(128, 128, 3)\n",
+      "(256, 256, 3)\n",
       "**************************\n",
-      "(128, 128, 3)\n",
+      "(256, 256, 3)\n",
       "**************************\n",
-      "(128, 128, 3)\n",
+      "(256, 256, 3)\n",
       "**************************\n",
-      "(128, 128, 3)\n",
+      "(256, 256, 3)\n",
       "**************************\n",
-      "(128, 128, 3)\n",
+      "(256, 256, 3)\n",
       "**************************\n",
-      "(128, 128, 3)\n",
+      "(256, 256, 3)\n",
       "**************************\n",
-      "(128, 128, 3)\n",
+      "(256, 256, 3)\n",
       "**************************\n",
-      "(128, 128, 3)\n",
+      "(256, 256, 3)\n",
       "**************************\n",
-      "(128, 128, 3)\n",
+      "(256, 256, 3)\n",
       "**************************\n",
-      "(128, 128, 3)\n",
+      "(256, 256, 3)\n",
       "**************************\n",
-      "(128, 128, 3)\n",
+      "(256, 256, 3)\n",
       "**************************\n",
-      "(128, 128, 3)\n",
+      "(256, 256, 3)\n",
       "**************************\n",
-      "(128, 128, 3)\n",
+      "(256, 256, 3)\n",
       "**************************\n",
-      "(128, 128, 3)\n",
+      "(256, 256, 3)\n",
       "**************************\n",
-      "(128, 128, 3)\n",
+      "(256, 256, 3)\n",
       "**************************\n",
-      "(128, 128, 3)\n",
+      "(256, 256, 3)\n",
       "**************************\n"
      ]
     }
@@ -487,7 +487,7 @@
     "    loop_img = io.imread(path)\n",
     "    print(loop_img.shape)\n",
     "    \n",
-    "    aug_img_and_save(loop_img, path.split(\"\\\\\")[-1][:-4], augment_functions, \"data/images/1px_2px_3px/128/train\")\n"
+    "    aug_img_and_save(loop_img, path.split(\"\\\\\")[-1][:-4], augment_functions, \"data/images/1px_3px/256/train\")\n"
    ]
   },
   {
